@@ -7,6 +7,7 @@ v0.7.2.3 BETA
   * Added onStart - This event is the better "onLoop". This event will be executed, when SMBX is running the first frame.
   * Fixed music.ini bug which wasn't supported track number suffix for NSF/HES/etc. multi-track musics
   * NPCs can now be killed, even if they are hidden.
+  * Add width/height properties to LuaImageResource.
   
 v0.7.2.2 BETA:
   * Extended NPC class
